--- a/config/sidebar.yaml
+++ b/config/sidebar.yaml
@@ -6,8 +6,8 @@
 # =====================================================
 
 sidebar:
-  userName: "[Your Name]" # Name displayed at the top of the sidebar
-  profileImage: https://github.com/shadcn.png # Profile image URL
+  userName: "Harsh Shah" # Name displayed at the top of the sidebar
+  # profileImage: https://github.com/shadcn.png # Profile image URL
   sections:
     - title: About Me
       url: ""
@@ -33,14 +33,14 @@ sidebar:
         name: LuNewspaper
         package: "react-icons/lu"
 
-    - title: Movies
-      url: "movies"
-      icon:
-        name: LuClapperboard
-        package: "react-icons/lu"
+    # - title: Movies
+    #   url: "movies"
+    #   icon:
+    #     name: LuClapperboard
+    #     package: "react-icons/lu"
 
-    - title: Music
-      url: "music"
-      icon:
-        name: LuMusic
-        package: "react-icons/lu"
+    # - title: Music
+    #   url: "music"
+    #   icon:
+    #     name: LuMusic
+    #     package: "react-icons/lu"
