--- a/config/site.yaml
+++ b/config/site.yaml
@@ -4,7 +4,7 @@
 # =====================================================
 
 site:
-  name: "Showlit"
+  name: "harsh's site"
   repoUrl: "https://github.com/pm25/showlit"
-  description: "A short description"
-  author: "Your Name"
+  description: "Personal and professional portfolio of me!"
+  author: "Harsh Shah"
